--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,22 @@
 .thumbnail img{
-    max-height: 200px;
+    max-height: 150px;
+    min-height: 150px;
+    align-items: center;
 }
 
 .thumbnail.description{
     color: #939393
 }
 
+.thumbnail{
+    padding-top: 20px;
+}
+
 .price{
     font-weight: bold;
     font-size: 16px;
+}
+
+h1{
+    padding-top: 20px;
 }
