--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,94 +1,21 @@
-<div class="row">
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://c-8oqtgrjgwu46x24epgv5x2eedukuvcvkex2eeqo.g00.cnet.com/g00/3_c-8yyy.epgv.eqo_/c-8OQTGRJGWU46x24jvvrux3ax2fx2fepgv5.edukuvcvke.eqox2fkoix2ffDZkTYQjljWCw9LiAceNZaRhbpOx3dx2f2z01x3a3402z3210x2f4239x2f28x2f34x2f78798011-h644-612h-c1e4-54hde1d3e7f8x2fw50-kocig-4.lrix3fk32e.octmx3dkocig_$/$/$/$/$/$/$/$/$"
-                 alt="..."
-                 class="img-responsive">
-            <div class="caption">
-                <h3>Monitor</h3>
-                <p>...Item Description...</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$400</div>
-                    <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
+{{# each products}}
+    <div class="row">
+        {{# each this }}
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="{{ this.imagePath}}"
+                         alt="..."
+                         class="img-responsive">
+                    <div class="caption">
+                        <h3>{{ this.title }}</h3>
+                        <p>{{ this.description }}</p>
+                        <div class="clearfix">
+                            <div class="price pull-left">${{ this.price }}</div>
+                            <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-success" role="button">Add to Shopping Cart</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        {{/each}}
     </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://c-8oqtgrjgwu46x24epgv5x2eedukuvcvkex2eeqo.g00.cnet.com/g00/3_c-8yyy.epgv.eqo_/c-8OQTGRJGWU46x24jvvrux3ax2fx2fepgv5.edukuvcvke.eqox2fkoix2ffDZkTYQjljWCw9LiAceNZaRhbpOx3dx2f2z01x3a3402z3210x2f4239x2f28x2f34x2f78798011-h644-612h-c1e4-54hde1d3e7f8x2fw50-kocig-4.lrix3fk32e.octmx3dkocig_$/$/$/$/$/$/$/$/$"
-                 alt="..."
-                 class="img-responsive">
-            <div class="caption">
-                <h3>Monitor</h3>
-                <p>...Item Description...</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$400</div>
-                    <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://c-8oqtgrjgwu46x24epgv5x2eedukuvcvkex2eeqo.g00.cnet.com/g00/3_c-8yyy.epgv.eqo_/c-8OQTGRJGWU46x24jvvrux3ax2fx2fepgv5.edukuvcvke.eqox2fkoix2ffDZkTYQjljWCw9LiAceNZaRhbpOx3dx2f2z01x3a3402z3210x2f4239x2f28x2f34x2f78798011-h644-612h-c1e4-54hde1d3e7f8x2fw50-kocig-4.lrix3fk32e.octmx3dkocig_$/$/$/$/$/$/$/$/$"
-                 alt="..."
-                 class="img-responsive">
-            <div class="caption">
-                <h3>Monitor</h3>
-                <p>...Item Description...</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$400</div>
-                    <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://c-8oqtgrjgwu46x24epgv5x2eedukuvcvkex2eeqo.g00.cnet.com/g00/3_c-8yyy.epgv.eqo_/c-8OQTGRJGWU46x24jvvrux3ax2fx2fepgv5.edukuvcvke.eqox2fkoix2ffDZkTYQjljWCw9LiAceNZaRhbpOx3dx2f2z01x3a3402z3210x2f4239x2f28x2f34x2f78798011-h644-612h-c1e4-54hde1d3e7f8x2fw50-kocig-4.lrix3fk32e.octmx3dkocig_$/$/$/$/$/$/$/$/$"
-                 alt="..."
-                 class="img-responsive">
-            <div class="caption">
-                <h3>Monitor</h3>
-                <p>...Item Description...</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$400</div>
-                    <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://c-8oqtgrjgwu46x24epgv5x2eedukuvcvkex2eeqo.g00.cnet.com/g00/3_c-8yyy.epgv.eqo_/c-8OQTGRJGWU46x24jvvrux3ax2fx2fepgv5.edukuvcvke.eqox2fkoix2ffDZkTYQjljWCw9LiAceNZaRhbpOx3dx2f2z01x3a3402z3210x2f4239x2f28x2f34x2f78798011-h644-612h-c1e4-54hde1d3e7f8x2fw50-kocig-4.lrix3fk32e.octmx3dkocig_$/$/$/$/$/$/$/$/$"
-                 alt="..."
-                 class="img-responsive">
-            <div class="caption">
-                <h3>Monitor</h3>
-                <p>...Item Description...</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$400</div>
-                    <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="https://c-8oqtgrjgwu46x24epgv5x2eedukuvcvkex2eeqo.g00.cnet.com/g00/3_c-8yyy.epgv.eqo_/c-8OQTGRJGWU46x24jvvrux3ax2fx2fepgv5.edukuvcvke.eqox2fkoix2ffDZkTYQjljWCw9LiAceNZaRhbpOx3dx2f2z01x3a3402z3210x2f4239x2f28x2f34x2f78798011-h644-612h-c1e4-54hde1d3e7f8x2fw50-kocig-4.lrix3fk32e.octmx3dkocig_$/$/$/$/$/$/$/$/$"
-                 alt="..."
-                 class="img-responsive">
-            <div class="caption">
-                <h3>Monitor</h3>
-                <p>...Item Description...</p>
-                <div class="clearfix">
-                    <div class="price pull-left">$400</div>
-                    <a href="#" class="btn btn-primary" role="button">More Detail</a> <a href="#" class="btn btn-default" role="button">Buy Now</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+{{/each}}
