--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,7 +5,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
+        <ul class="nav navbar-nav navbar-right">
             <li class="nav-item">
                 <a class="nav-link" href="/shopping-cart">
                     <i class="fas fa-shopping-cart"></i> Shopping Cart
