--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -2,7 +2,24 @@
     <div class="row">
         {{# each this }}
             <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
+
+                <div class="card">
+                    <div class="card-header">
+                       Feature Item     
+                    </div>
+                    <div class="card-body">
+                         <img src="{{ this.imagePath }}"
+                            alt="..."
+                            class="img-responsive">
+                        <h5 class="card-title">{{ this.title }}</h5>
+                        <p class="card-text">{{ this.description }}</p>
+                        <p class="card-text">
+                            <strong>${{ this.price }}</strong>
+                        </p>
+                        <a href="/add-to-cart/{{ this.id }}" class="btn btn-primary" role="button">Add to Shopping Cart</a>
+                    </div>
+                </div>
+                {{!-- <div class="thumbnail">
                     <img src="{{ this.imagePath }}"
                          alt="..."
                          class="img-responsive">
@@ -10,11 +27,13 @@
                         <h3>{{ this.title }}</h3>
                         <p>{{ this.description }}</p>
                         <div class="clearfix">
-                            <div class="price pull-left">${{ this.price }}</div>
+                            <div> 
+                                 <strong>${{ this.price }}</strong>
+                                 </div>
                             <a href="/add-to-cart/{{ this.id }}" class="btn btn-success" role="button">Add to Shopping Cart</a>
                         </div>
                     </div>
-                </div>
+                </div> --}}
             </div>
         {{/each}}
     </div>
